crates/carta/tests/snapshots/golden_writer__typst__table__table-short-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 1,
    align: (auto,),
    table.header([h],),
    table.hline(),
    [v],
  )]
  , caption: [The full caption text]
  , kind: table
  )
