crates/carta/tests/snapshots/golden_writer__typst__table__table-wide-unicode.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 2,
    align: (auto,auto,),
    table.header([項目], [値],),
    table.hline(),
    [名前], [漢字テキスト],
    [x], [y],
  )]
  , kind: table
  )
